<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WeatherSolution</string>
    <string name="newyork" translatable="false">New York</string>
    <string name="icon" translatable="false">Icon</string>
    <string name="weather">Weather</string>
    <string name="temp">Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="addplace">Add Place</string>
    <string name="place">Place</string>
    <string name="deleteAll">Delete all</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="pleaseenter">Please enter a place!</string>
    <string name="back">Back</string>
    <string name="noresult">Couldn´t load data! Please check place!</string>
    <string name="na">not available</string>
    <string name="deleteSelected">Delete selected</string>
    <string name="countryPlace" translatable="false">%1$s, %2$s</string>
    <string name="iconURL" translatable="false">http://openweathermap.org/themes/openweathermap/assets/vendor/owm/img/widgets/%1$s.png</string>
    <string name="jsonURL" translatable="false">http://api.openweathermap.org/data/2.5/weather?appid=%1$s&amp;q=%2$s</string>
</resources>